# we-winning-ia

./: README.md
backend/: main.py  pipeline.py  pyproject.toml  service.yaml  test_live_agent.py
backend/agents/: knowledge_base.py  narrative_script.py  parser.py  stitcher.py  tts.py  veo.py  video_script.py
backend/models/: knowledge_base.py  manifest.py  narration_script.py
backend/routers/: generate.py  live.py  status.py
backend/scripts/: generate_avatars.py  setup_gcs.py
backend/storage/final/: 4972fc47-3519-4eb8-bee4-375541b9548d_concat.txt
backend/storage/veo/: 1b8d764e-331d-4315-983b-02e72c54e437_scene_1.txt  1b8d764e-331d-4315-983b-02e72c54e437_scene_2.txt  1b8d764e-331d-4315-983b-02e72c54e437_scene_3.txt  1b8d764e-331d-4315-983b-02e72c54e437_scene_4.txt  1b8d764e-331d-4315-983b-02e72c54e437_scene_5.txt  361cb0ed-e93b-494e-b132-7105e1788c26_scene_1.txt  361cb0ed-e93b-494e-b132-7105e1788c26_scene_2.txt  361cb0ed-e93b-494e-b132-7105e1788c26_scene_3.txt  361cb0ed-e93b-494e-b132-7105e1788c26_scene_4.txt  361cb0ed-e93b-494e-b132-7105e1788c26_scene_5.txt  361cb0ed-e93b-494e-b132-7105e1788c26_scene_6.txt  4972fc47-3519-4eb8-bee4-375541b9548d_scene_1.txt  4972fc47-3519-4eb8-bee4-375541b9548d_scene_2.txt  4972fc47-3519-4eb8-bee4-375541b9548d_scene_3.txt  4972fc47-3519-4eb8-bee4-375541b9548d_scene_4.txt  4972fc47-3519-4eb8-bee4-375541b9548d_scene_5.txt  (+6 more)
backend/tests/: test_knowledge_base.py  test_narrative_script.py  test_pipeline.py  test_video_pipeline.py
backend/tools/: gemini.py  invite.py  job_store.py  storage.py
frontend/src/app/: layout.tsx  (+1 more)
